# src/routes/routes.ts
@@ -32,7 +32,7 @@ const models: TsoaRoute.Models = {
             "pageIndex": {"dataType":"double","required":true},
             "searchString": {"dataType":"string"},
             "sortBy": {"dataType":"string"},
-            "sortOn": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["ASC"]},{"dataType":"enum","enums":["DESC"]}]},
+            "sortOn": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["asc"]},{"dataType":"enum","enums":["desc"]}]},
         },
         "additionalProperties": false,
     },
@@ -44,7 +44,7 @@ const models: TsoaRoute.Models = {
             "pageIndex": {"dataType":"double","required":true},
             "searchString": {"dataType":"string"},
             "sortBy": {"dataType":"string"},
-            "sortOn": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["ASC"]},{"dataType":"enum","enums":["DESC"]}]},
+            "sortOn": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["asc"]},{"dataType":"enum","enums":["desc"]}]},
         },
         "additionalProperties": false,
     },
